<resources>
    <string name="app_name">p2pclaudiaguzman</string>
    <string name="rmasculino">Masculino</string>
    <string name="rfemenino">Femenino</string>
    <string name="bmensaje">Mensaje</string>
    <string name="letrero1">Numero num1</string>
    <string name="letrero2">Numero num2</string>
    <string name="Suma"> suma </string>
    <string name="Resta">resta</string>
    <string name="Multiplicacion">multiplicacion</string>
    <string name="Division">division</string>
</resources>
